--- a/EventfulWebApi/Views/Shared/_EventList.cshtml
+++ b/EventfulWebApi/Views/Shared/_EventList.cshtml
@@ -1,4 +1,90 @@
 ﻿@model IEnumerable<EventfulWebApi.Models.Event>
 @using Kendo.Mvc.UI;
 
-  
+ <div class="clear-fix"></div>
+<script type="text/x-kendo-tmpl" id="template">
+    <div id="list-content">
+        <ul id="events-list">
+            <li class="fieldData" itemtype="http://schema.org/Event" itemscope="">
+                <a href="#:url#" class="tn-frame">
+
+
+                    <img src="//d1marr3m5x4iac.cloudfront.net/images/block/I0-001/030/440/987-4.jpeg_/ubc-thunderbirds-football-v-manitoba-bisons-87.jpeg" width="111" height="111">
+                </a>
+                <h4>
+                    <a href="#:url#" title="#:title#" itemprop="url">
+                        <span itemprop="name">
+                            #:title#
+                        </span>
+                    </a>
+                </h4>
+                <div class="fieldData">
+                    <div>
+                        <div itemprop="startDate" content="2017-09-09T13:00:00" class="event-date">
+                            #:start_time#
+                        </div>
+
+                        <div class="event-venue">
+                            <div itemprop="location" itemscope="" itemtype="http://schema.org/Place" class="location">
+                                <h6 itemprop="name"><a href="#:venue_url#" itemprop="url" data-ga-label="Venue Title Link">#:venue_name#</a></h6>
+
+                                <p itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
+                                    <span itemprop="streetAddress">#:venue_address#</span><br>
+                                    <span itemprop="addressLocality">#:city_name#</span>, <span itemprop="addressRegion">#:region_name#</span>
+                                    <span itemprop="postalCode">#:postal_code#</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </li>
+
+
+        </ul>
+    </div>
+</script>
+<div class="demo-section k-content wide">
+    if (ViewBag.SearchType == "Post")
+    {    @(Html.Kendo().ListView(Model).Name("listView")
+        .TagName("div")
+        .ClientTemplateId("template")
+        .DataSource(dataSource => dataSource
+            .PageSize(20)
+            .ServerOperation(false)
+         )
+        .Pageable()
+    )
+    }
+</div>
+
+
+
+
+
+<style>
+    .search-results {
+        border-top: 1px solid transparent;
+        border-bottom: 1px solid #dbdbdb;
+        border-left: 1px solid #dbdbdb;
+        list-style-type: none;
+        margin-bottom: 0;
+        min-height: 800px;
+        position: relative;
+    }
+
+
+    ul li {
+        list-style-type: none;
+    }
+
+    li {
+        line-height: 18px;
+    }
+
+    ul li div {
+        font-family: Arial;
+        font-weight: bold;
+        font-size: 12px;
+    }
+</style>
