--- a/EventfulWebApi/Views/Shared/_Layout.cshtml
+++ b/EventfulWebApi/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("EventSearch", "Index", "Event", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    @*<li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>*@
                 </ul>
             </div>
         </div>
